# --- injected for the standalone mirror by tools/copybara/copy.bara.sky ---
[workspace]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
repository = "https://github.com/hopmesh/monorepo"

[workspace.dependencies]
hop-core = { version = "0.0.1", package = "hop-mesh-core" }
hop-endpoint-core = { version = "0.0.1", package = "hop-mesh-endpoint-core" }
hop-store-sqlite = { version = "0.0.1", default-features = false, package = "hop-mesh-store-sqlite" }
hop-store-firestore = { version = "0.0.1", package = "hop-mesh-store-firestore" }
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["use-std"] }
blake3 = "1"
sha2 = "0.11"
ed25519-dalek = { version = "3", features = ["rand_core"] }
x25519-dalek = { version = "3", features = ["static_secrets"] }
chacha20poly1305 = "0.11"
rand_core = { version = "0.6", features = ["getrandom"] }
thiserror = "2"
miniz_oxide = "0.9"
snow = "0.10"
rusqlite = { version = "0.40", features = ["bundled"] }
# --- end injected preamble ---
[package]
name = "hop-gateway"
version.workspace = true
edition.workspace = true
license-file = "LICENSE.md"
repository.workspace = true
description = "Internet-egress node for Hop: fulfills HTTP-request bundles (DESIGN.md §9)."

[[bin]]
name = "hop-gateway"
path = "src/main.rs"
# The binary needs the production reqwest client + the relay-dial transport.
required-features = ["reqwest"]

[dependencies]
hop-core.workspace = true
bs58 = "0.5"
url = "2"
# The production egress HTTP client (services-02): blocking reqwest with connect/read timeouts, no
# redirects, and a streaming response cap. Optional so the trait-only lib stays lean.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"], optional = true }
# The relay-dial bearer for the binary: a TLS WebSocket client (leaf reachable on the mesh, §30).
tungstenite = { version = "0.30", features = ["rustls-tls-webpki-roots"], optional = true }

[features]
# `reqwest` pulls the production HTTP client + the WebSocket bearer, which the binary requires. The
# library (trait + abuse controls + fulfill/screen) builds with no features for embedding/testing.
default = []
reqwest = ["dep:reqwest", "dep:tungstenite"]
